log
Tue 13 Sep 2022 10:31:01 PM UTC: 
 sudoku.c | 105 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 101 insertions(+), 4 deletions(-)
 tests:  10|0
total_score: 70/70
6c60861
Tue 13 Sep 2022 10:31:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:168:5: note: previous definition of ‘main’ was here
  168 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c8a58a6
Tue 13 Sep 2022 10:31:59 PM UTC: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  10|0
total_score: 70/70
d8052ed
Tue 13 Sep 2022 10:32:38 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
6c5bd5b
Tue 13 Sep 2022 10:33:27 PM UTC: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘print_node’:
sudoku.c:35:12: error: ‘j’ undeclared (first use in this function)
   35 |        for(j=0;j<9;j++)
      |            ^
sudoku.c:35:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
957c57c
